// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doBackportVersion with pull request reference 1`] = `
Object {
  "adapter": [Function],
  "data": "{\\"title\\":\\"[6.x] myCommitMessage | myOtherCommitMessage\\",\\"body\\":\\"Backports the following commits to 6.x:\\\\n - myCommitMessage (#myPullRequest)\\\\n - myOtherCommitMessage (#myOtherPullRequest)\\",\\"head\\":\\"sqren:backport/6.x/pr-myPullRequest_pr-myOtherPullRequest\\",\\"base\\":\\"6.x\\"}",
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Content-Length": 269,
    "Content-Type": "application/json;charset=utf-8",
    "User-Agent": "axios/0.17.1",
  },
  "host": "http://localhost",
  "maxContentLength": -1,
  "method": "post",
  "timeout": 0,
  "transformRequest": Object {
    "0": [Function],
  },
  "transformResponse": Object {
    "0": [Function],
  },
  "url": "https://api.github.com/repos/elastic/kibana/pulls?access_token=undefined",
  "validateStatus": [Function],
  "xsrfCookieName": "XSRF-TOKEN",
  "xsrfHeaderName": "X-XSRF-TOKEN",
}
`;

exports[`doBackportVersion with pull request reference 2`] = `
Array [
  Array [
    "git reset --hard && git clean -d --force && git checkout master && git pull origin master",
    Object {
      "cwd": "/homefolder/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git fetch origin 6.x && git branch backport/6.x/pr-myPullRequest_pr-myOtherPullRequest origin/6.x --force && git checkout backport/6.x/pr-myPullRequest_pr-myOtherPullRequest ",
    Object {
      "cwd": "/homefolder/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git cherry-pick mySha",
    Object {
      "cwd": "/homefolder/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git cherry-pick mySha2",
    Object {
      "cwd": "/homefolder/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git push sqren backport/6.x/pr-myPullRequest_pr-myOtherPullRequest --force",
    Object {
      "cwd": "/homefolder/.backport/repositories/elastic/kibana",
    },
  ],
]
`;

exports[`doBackportVersion without pull request reference 1`] = `
Object {
  "adapter": [Function],
  "data": "{\\"title\\":\\"[6.x] myCommitMessage\\",\\"body\\":\\"Backports the following commits to 6.x:\\\\n - myCommitMessage (mySha)\\",\\"head\\":\\"sqren:backport/6.x/commit-mySha\\",\\"base\\":\\"6.x\\"}",
  "headers": Object {
    "Accept": "application/json, text/plain, */*",
    "Content-Length": 164,
    "Content-Type": "application/json;charset=utf-8",
    "User-Agent": "axios/0.17.1",
  },
  "host": "http://localhost",
  "maxContentLength": -1,
  "method": "post",
  "timeout": 0,
  "transformRequest": Object {
    "0": [Function],
  },
  "transformResponse": Object {
    "0": [Function],
  },
  "url": "https://api.github.com/repos/elastic/kibana/pulls?access_token=undefined",
  "validateStatus": [Function],
  "xsrfCookieName": "XSRF-TOKEN",
  "xsrfHeaderName": "X-XSRF-TOKEN",
}
`;

exports[`doBackportVersion without pull request reference 2`] = `
Array [
  Array [
    "git reset --hard && git clean -d --force && git checkout master && git pull origin master",
    Object {
      "cwd": "/homefolder/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git fetch origin 6.x && git branch backport/6.x/commit-mySha origin/6.x --force && git checkout backport/6.x/commit-mySha ",
    Object {
      "cwd": "/homefolder/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git cherry-pick mySha",
    Object {
      "cwd": "/homefolder/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git push sqren backport/6.x/commit-mySha --force",
    Object {
      "cwd": "/homefolder/.backport/repositories/elastic/kibana",
    },
  ],
]
`;
